--- a/block-BHaabs/assets/css/style.css
+++ b/block-BHaabs/assets/css/style.css
@@ -104,7 +104,7 @@ p
 {
     display: flex;
     justify-content: space-between;
-    align-content: center;
+    align-items: center;
 }
 .tagged
 {
