--- a/block-BHaabs/assets/css/style.css
+++ b/block-BHaabs/assets/css/style.css
@@ -71,21 +71,20 @@ body
     color: white;
     line-height: 1.5;
 }
-.padding-ud 
-{
-    padding: 32px 0;
-}
+
 h1
 {
     font-size: 50px;
     text-transform: capitalize;
     text-shadow: 5px 4px 4px black;
+    margin-bottom: 32px;
 }
 h2
 {
     font-size: 46px;
     text-transform: capitalize;
     text-shadow: 5px 4px 4px black;
+    margin-bottom: 32px;
 }
 
 h3
@@ -95,8 +94,8 @@ h3
 }
 p
 {
-    padding: 14px 0;
     color: #97907a;
+    margin-bottom: 18px;
 }
 
 
